Add project cluster scheduling
